--- a/index.html
+++ b/index.html
@@ -9,4 +9,4 @@
     <h3>Section 1 </h3>
      <h3>Section 2</h3>
 
-     <p>Hello</p>
+     <p>making a change to practice submitting to remote repository aka Github</p>
